# asymintervals

./: .gitignore  .readthedocs.yaml  EPI_data.xlsx  LICENSE  README.md  epi.csv  main.py  pyproject.toml
asymintervals/: __init__.py  ain.py  asymintervals.py  distances.py  graphain.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
pyain/: __init__.py  pyain.py
